recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:10: error: reassignment to val
 	 length=length+1
               ^